# Turing-machine-compiler

./: .gitignore  CMakeLists.txt  MEMORY_INVARIANTS.md  finite state machine.txt  structure.txt
.github/: copilot-instructions.md
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: App.h  CodegenPrimitives.h  Compiler.h  Condition.h  Diagnostics.h  Flatten.h  IR.h  Interpreter.h  Lexer.h  MemoryLayout.h  TransitionGenerator.h  TransitionTable.h  TuringMachine.h  Types.h
src/: App.cpp  CodegenPrimitives.cpp  Compiler.cpp  Condition.cpp  Flatten.cpp  IR.cpp  Interpreter.cpp  Lexer.cpp  TransitionGenerator.cpp  TransitionTable.cpp  TuringMachine.cpp  main.cpp
